Fix issue with flickering cursor on add subcategory button

--- a/desktop/src/app/components/widgets/category-picker.scss
+++ b/desktop/src/app/components/widgets/category-picker.scss
@@ -82,10 +82,7 @@ category-picker {
     background-color: transparent;
     border: 0;
     height: 100%;
-
-    &:hover {
-      cursor: default;
-    }
+    cursor: default;
 
     &:focus {
       outline: none;
